# git-pandas

./: .buildinfo  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  attributes.html  bus_factor.html  cache.html  commit_history.html  contributors.html  coverage.html  cumulative_blame.html  file_change_rates.html  genindex.html  index.html  objects.inv  params.json  performance.html  project.html  py-modindex.html  pyproject.toml  remote_operations.html  repository.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  usecases.html
.cursor/rules/: project_overview.mdc  pytest_standards.mdc  python_standards.mdc  sphinx_docs_standards.mdc  testing.mdc
.doctrees/: cache.doctree  contributors.doctree  index.doctree  performance.doctree  project.doctree  remote_operations.doctree  repository.doctree  usecases.doctree
.doctrees/__intersphinx_cache__/: gitpython_objects.inv
.github/workflows/: docs.yml  pypi-publish.yml  test-docs-build.yml  test-suite.yml
_modules/: index.html
_modules/gitpandas/: cache.html  project.html  repository.html
_sources/: cache.rst.txt  commit_history.txt  contributors.rst.txt  coverage.txt  cumulative_blame.txt  file_change_rates.txt  index.rst.txt  index.txt  performance.rst.txt  project.rst.txt  project.txt  repository.rst.txt  usecases.rst.txt  usecases.txt
_static/: pygments.css
_static/css/: wabi.css
docs/: AUDIT_REPORT.md  Makefile  make.bat  requirements.txt
docs/source/: CNAME  attributes.rst  bus_factor.rst  cache.rst  conf.py  contributors.rst  cumulative_blame.rst  index.rst  project.rst  remote_operations.rst  repository.rst  usecases.rst
docs/source/_static/: custom.css
examples/: __init__.py  attributes.py  branches.py  bus_analysis.py  cache_management.py  cache_timestamps.py  cloud_repo.py  commit_history.py  cumulative_blame.py  cumulative_repo_blame.py  definitions.py  file_change_rates.py  hours_estimate.py  lifeline.py  parallel_blame.py  project_blame.py  punchcard.py  release_analytics.py  remote_fetch_and_cache_warming.py  repo_file_detail.py
gitnoc_desktop/: Makefile  README.md  __init__.py  main.py  requirements.txt
gitnoc_desktop/config/: __init__.py  loader.py
gitnoc_desktop/core/: __init__.py  data_fetcher.py  utils.py  workers.py
gitnoc_desktop/tests/: test_main_window.py  test_placeholder.py
gitnoc_desktop/tests/core/: test_branch_handling.py  test_data_fetcher.py  test_tag_handling.py
gitnoc_desktop/tests/ui/widgets/: test_cumulative_blame_tab.py
gitnoc_desktop/ui/: __init__.py  main_window.py  styles.py
gitnoc_desktop/ui/widgets/: __init__.py  base_tab.py  code_health_tab.py  contributors_tab.py  cumulative_blame_tab.py  dataframe_table.py  loading_overlay.py  overview_tab.py  tags_tab.py
gitpandas/: __init__.py  cache.py  logging.py  project.py  repository.py
gitpandas/tests/: test_cache.py
gitpandas/utilities/: __init__.py  check_api.py  plotting.py
mcp_server/: README.md  server.py
tests/: README.md  __init__.py  conftest.py  test_bulk_fetch_warm.py  test_cache.py  test_cache_immutability.py  test_cache_integration.py  test_cache_key_consistency.py  test_cache_management.py  test_cache_threading.py  test_cache_warming.py  test_cached_signatures.py  test_examples.py  test_logging.py  test_main_window.py  test_remote_fetch.py  test_repository_cache.py
tests/test_Project/: __init__.py  test_advanced.py  test_blame_file_detail_empty.py  test_blame_multi_repo.py  test_bus_factor.py  test_commits_in_tags.py  test_edge_cases.py  test_error_handling.py  test_properties.py
tests/test_Repository/: __init__.py  test_advanced.py  test_bus_factor.py  test_edge_cases.py  test_error_handling.py  test_file_detail.py  test_file_operations.py  test_hours_estimate.py  test_properties.py  test_punchcard.py
tests/test_utilities/: test_check_api.py  test_init.py  test_plotting.py
tests/ui/widgets/: test_cumulative_blame_tab.py
